# krextor

./: .gitignore  Jamfile  Jamrules
config/: Jamfile  Jamfile.sys  Jamfile.sys.in  config.status  configure  configure.in  pre.conf  pre.conf.in
config/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/m4/: uac_general.m4
data/: gw-sip-conf.xml  gw-sip-peer.conf  gw.conf  ibcf.conf  ibcfdb.conf  icscf.conf  icscfadif.conf  icscfdb.conf  pcscf.conf  pcscfadif.conf  pcscfdb.conf  scscf.conf  scscfadif.conf  scscfdb.conf  uhttp_conf.xml
data/tntdbs/sessiondb/: sessiondb.cfg  sessiondb.lua  sessiondb.schema.lua
include/uims/: uims_conf.h  uims_constants.h  uims_def.h  uims_sess.h  uims_util.h
modules/: Jamfile
modules/clicktocall/: Jamfile
modules/clicktocall/src/: Jamfile  clicktocall_conf.c  clicktocall_dlgsess.c  clicktocall_dlgsvc.c  clicktocall_error.c  clicktocall_plugin.c  clicktocall_sessdb.c  clicktocall_xcpt.c
modules/clicktocall/xcpt/: Jamfile  clicktocall.xcpt  clicktocall_recording.xcpt
modules/eipmsib/: Jamfile
modules/eipmsib/conf/: eipmsib.conf  proc.conf  ualog.conf  uxcserv.conf
modules/eipmsib/script/: dbif.send.sh
modules/eipmsib/src/: Jamfile  clicktocall_req.c  clicktocall_req.h  clicktocall_rpt.c  clicktocall_rpt.h  clicktocall_rsp.c  clicktocall_rsp.h  clicktocallrecording_req.c  clicktocallrecording_req.h  clicktocallrecording_rpt.c  clicktocallrecording_rpt.h  (+29 more)
modules/eipmssim/: Jamrules  README.txt
modules/gw/: Jamfile
modules/smsmcib/: Jamfile
modules/sswsim/: Jamfile  mysql.sql
modules/testtcpserver/: Jamfile
modules/uims/: Jamfile
test/acceptance/: clicktocall.xml  clicktocall_calling_busy.json  clicktocall_calling_busy.sh  clicktocall_normal.json  clicktocall_normal.sh
(+248 files in other folders)
